Add parameter and ring relation, some test not fixed
